--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/logo/angular2-logo-white.png" />
     <link rel="icon" type="image/png" href="./assets/img/logo/angular2-logo-white.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Smart Irrigation</title>
+    <title>Consultório Odontológico</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
